--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,13 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    
+    <div class="container">
+      <input type="text" class="input" placeholder="Enter some country"/>
+      <div class="js-card-container card-container"></div>
+    </div>
+    
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
 </html>
